fix: replace List.of() with Arrays.asList() for Java 8 compatibility
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>